# polymap

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
polymap/: __init__.py  cli.py
polymap/aws/: __init__.py  iam_collector.py  s3_collector.py  session.py
polymap/graph/: __init__.py  build.py  export.py  paths.py
polymap/policy/: __init__.py  assume_role.py  effective.py  matcher.py  parser.py
polymap/web/: __init__.py  app.py
polymap/web/static/: graph.js  index.html  style.css
scripts/: setup_minio.sh
test/: iam_scenario1.json  iam_scenario2.json  iam_scenario3.json  iam_scenario4.json  run_scenario.py  s3.json  s3_scenario1.json  s3_scenario2.json  s3_scenario3.json  s3_scenario4.json
