[project]
name = "aws-access-graph"
version = "0.1.0"
description = "AWS policy graph and analysis utilities"
readme = "polymap/README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "botocore>=1.34",
  "typer>=0.12",
  "pydantic>=2.7",
  "networkx>=3.2",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.scripts]
polymap = "polymap.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymap*"]
